[package]
name = "egui_image_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24"
egui-wgpu = "0.24"
futures = "0.3"
image = "0.24"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
