[package]
name = "egui_image_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
egui-wgpu = "0.24.1"
futures = "0.3.30"
image = "0.25.2"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["sync"] }
